# ChecklistCasa

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  docker-entrypoint.sh  pyproject.toml
.kiro/specs/housing-evaluation-system/: design.md  requirements.md  tasks.md
.kiro/steering/: tasks.md  tech.md
accounts/: admin.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
core/: apps.py  email_backend.py  middleware.py  signals.py  urls.py  views.py
core/settings/: base.py  development.py  production.py
docs/: TODO.txt
projects/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_visit_realtor_contact_and_more.py
projects/templatetags/: comparison_extras.py
static/: sw.js
static/css/: visit-forms.css
templates/: base.html  home.html
templates/account/: base.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  signup.html  verification_sent.html
templates/legal/: privacy_policy.html  terms_of_service.html
templates/projects/: add_default_criteria.html  comparison_table.html  create.html  criteria_form.html  criteria_list.html  detail.html  edit.html  list.html  list_enhanced.html  realtor_create.html  realtor_form.html  realtor_list.html  visit_create_step1.html  visit_create_step2.html  visit_create_step3.html  visit_detail.html  visit_edit.html  visit_list.html
