[project]
name = "checklistcasa"
version = "0.1.0"
description = "Housing Evaluation System - A mobile-first micro SaaS for evaluating housing options"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "django-allauth>=0.57.0",
    "pillow>=10.0.0",
    "gunicorn>=21.0.0",
    "whitenoise>=6.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "django-stubs>=4.2.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["core", "accounts", "projects"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
